--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
         classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.0.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4'
         classpath 'ch.netzwerg:gradle-release-plugin:1.2.3'
-        classpath 'io.realm:realm-gradle-plugin:1.2.0-SNAPSHOT'
+        classpath 'io.realm:realm-gradle-plugin:1.1.1'
     }
 }
 apply plugin: 'ch.netzwerg.release'
